[gd_scene load_steps=4 format=3 uid="uid://re848yexjdnp"]

[ext_resource type="Script" uid="uid://b7v7gqkrf6s1j" path="res://fish_store_entry.gd" id="1_0akep"]
[ext_resource type="Resource" uid="uid://dva0mhhqhl50v" path="res://resources/fish_data/fish_1.tres" id="2_k33vs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k33vs"]
bg_color = Color(0.22, 0.22, 0.22, 1)

[node name="FishStoreEntry2" type="PanelContainer" unique_id=1293782674]
custom_minimum_size = Vector2(200, 48)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -1032.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0akep")
fish = ExtResource("2_k33vs")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1934265209]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="HBoxContainer" unique_id=1382190474]
layout_mode = 2
size_flags_horizontal = 3
text = "Fish Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropAmount" type="RichTextLabel" parent="HBoxContainer" unique_id=2051077523]
layout_mode = 2
size_flags_horizontal = 3
text = "1
per coin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropDelay" type="RichTextLabel" parent="HBoxContainer" unique_id=637187263]
layout_mode = 2
size_flags_horizontal = 3
text = "1s
per coin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="RichTextLabel" parent="HBoxContainer" unique_id=1435761332]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "10 coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GrowthDelay" type="RichTextLabel" parent="HBoxContainer" unique_id=1921302986]
layout_mode = 2
size_flags_horizontal = 3
text = "10s to adult"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buy" type="Button" parent="HBoxContainer" unique_id=764498067]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Buy
10 coins"

[node name="Quantity" type="RichTextLabel" parent="HBoxContainer" unique_id=1146690436]
layout_mode = 2
size_flags_horizontal = 3
text = "0 / 0
fry / adult"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sell" type="Button" parent="HBoxContainer" unique_id=1716006819]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Sell Adult
15 coins"

[node name="LockedMask" type="PanelContainer" parent="." unique_id=1675242883]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k33vs")

[node name="CenterContainer" type="CenterContainer" parent="LockedMask" unique_id=1994006460]
layout_mode = 2

[node name="LockedLabel" type="RichTextLabel" parent="LockedMask/CenterContainer" unique_id=1554014899]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "Unlock at ??? coins"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Buy" to="." method="buy"]
[connection signal="pressed" from="HBoxContainer/Sell" to="." method="sell"]
